# foundercap

./: .env.example  .gitignore  Dockerfile  README.md  TESTING_REPORT.md  alembic.ini  backlog.md  check_playwright.py  company_data_20250706_060802.json  company_data_20250706_061037.json  datamodel.md  docker-compose.yml  isolated_test_crunchbase.py  linkedin_company_scraper.py  prd.md  pyproject.toml  requirements-test.txt  requirements.txt  run_crunchbase_tests.py  run_isolated_tests.py  setup.py  sprintplan.md  test_api_endpoints.py  test_backend_components.py  test_crunchbase_isolated.py  test_crunchbase_simple.py  test_linkedin_integration.py  test_linkedin_scraper.py  test_linkedin_scraper_direct.py  test_simple.py  test_zerodb_integration.py  test_zerodb_simple.py  zerodb.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  companies.py  deps.py  google_alerts.py  health.py
app/api/crunchbase/: __init__.py
app/api/dependencies/: auth.py  crunchbase.py
app/api/endpoints/: crunchbase.py  pipeline.py
app/core/: config.py  diff.py  logging.py  redis.py  responses.py  scheduler.py  security.py  service.py  snapshot.py
app/db/: session.py
app/models/: __init__.py  company.py  founder.py  funding_round.py  investment_participant.py  investor.py
app/schemas/: __init__.py  base.py  company.py  founder.py  funding_round.py  investment_participant.py  investor.py  token.py  user.py
app/services/: pipeline.py
app/services/crunchbase/: README.md  __init__.py  client.py  config.py  exceptions.py  factory.py  models.py  service.py  utils.py
app/services/linkedin/: README.md  __init__.py  client.py  config.py  exceptions.py  models.py  scraper.py  service.py
app/services/scraper/: __init__.py  base.py  crunchbase.py  linkedin.py
app/services/updater/: __init__.py  airtable.py  base.py  zerodb.py
app/worker/: __init__.py  celery_app.py  tasks.py
examples/: crunchbase_example.py
scripts/: test_linkedin_scraper.py
tests/: conftest.py  conftest_crunchbase.py  test_airtable_updater.py  test_api_pipeline.py  test_companies_api.py  test_comprehensive.py  test_config.py  test_core.py  test_core_diff.py  test_core_snapshot.py  test_crunchbase_client.py  test_crunchbase_scraper.py  test_crunchbase_service.py  test_diff_engine.py  test_enhanced_crunchbase.py  test_google_alerts.py  test_health.py  test_isolated.py  test_linkedin_scraper.py  test_models_schemas.py  test_pipeline_service.py  test_services.py  test_snapshot_service.py  test_tasks.py  test_unit.py  test_zerodb_updater.py
tests/crunchbase/: test_service.py
tests/services/linkedin/: conftest.py  test_linkedin_service.py  (+1 more)
tests/unit/: test_crunchbase_enhanced.py
